--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Art 369: Software for People</title>
 </head>
 <body>
-    
+    <h1>Software for People</h1>
+    <p>This is my class website for Art 369: Software for People.</p>
 </body>
 </html>
